<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp"
    android:paddingEnd="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity2">


        <TextView
            android:id="@+id/tVconfirmardato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/confirmar_datos"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tVnombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/tvnombre" />

        <TextView
            android:id="@+id/tVfecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/tvfecha" />

        <TextView
            android:id="@+id/tVtelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/tvtelefono" />

        <TextView
            android:id="@+id/tVemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/tvemail" />

        <TextView
            android:id="@+id/tVdescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/tvdescripcion" />

        <Button
            android:id="@+id/beditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/editar"
            android:textColor="@color/colorText"
            android:textStyle="bold" />

</LinearLayout>
